--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ include_directories ("include")
 add_executable(
 	knpasm
 	"src/knpasm.c"
-	"src/tokenizing.c"
-	"src/knpcore.c"
+	"src/assembler.c"
+	"src/cpu.c"
 	
 	"include/knpasm/knpcore.h"
-	"include/knpasm/tokenizing.h"
+	
  )
