--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ include_directories ("include")
 
 add_executable(
 	knpasm
-	"src/knpasm.c"
+	"src/main.c"
 	"src/knputil.c"
-	"src/assembler.c"
-	"src/cpu.c"
+	"src/knpexpr.c"
+	"src/knpassembler.c"
+	"src/knpcpu.c"
 	
 	"include/knpasm/knpcore.h"
 	"include/knpasm/knputil.h"
+	"include/knpasm/knpexpr.h"
 )
